compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__nil_case.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "\nfn go(a) {\n  case a {\n    Nil -> 0\n  }\n}\n"
---
----- SOURCE CODE

fn go(a) {
  case a {
    Nil -> 0
  }
}


----- COMPILED JAVASCRIPT
function go(a) {
  {
    return 0n;
  }
}
